major website update for 23-24 including pictures, text, colors

--- a/src/styles/about.module.css
+++ b/src/styles/about.module.css
@@ -10,7 +10,7 @@
   font-weight: 500;
   font-size: 16px;
   line-height: 24px;
-  color: var(--verde);
+  color: var(--white);
   cursor: pointer;
 }
 
