--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -187,9 +187,9 @@ table {
   --bg: #f4f1f0;
   --gray: #d6d6d6;
   --fg: #38473e;
-  --ctc: #4ccd87;
-  --indent: #43b878;
-  --verde: #9df2ba;
+  --ctc: #012b18;
+  --indent: #275b43;
+  --verde: #98c18b;
   --accent: #611a16;
   --rojo: #ad0c05;
 
