--- a/src/styles/footer.module.css
+++ b/src/styles/footer.module.css
@@ -23,9 +23,8 @@
   font-weight: 500;
   font-size: 16px;
   line-height: 21px;
-
   text-align: center;
-  color: var(--accents-1);
+  color: var(--white);
   padding: 8px 16px;
 }
 
@@ -33,8 +32,13 @@
   display: flex;
   flex-direction: row;
   align-items: flex-start;
+  color: var(--white);
 }
 
 .space {
   margin-left: 10px;
+}
+
+.attribution {
+  color: var(--verde);
 }
