--- a/src/styles/about.module.css
+++ b/src/styles/about.module.css
@@ -14,6 +14,17 @@
   cursor: pointer;
 }
 
+.grid {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  justify-content: center;
+  overflow: hidden;
+  gap: 32px;
+  align-items: center;
+  justify-items: start;
+  margin: 0px 0px 64px 0px;
+}
+
 .primarybutton:hover {
   color: var(--white);
 }
