--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -478,7 +478,7 @@ h4 {
   font-weight: 500;
   font-size: 1.25rem;
   line-height: 1;
-  margin-top: 1.5rem;
+  /* margin-top: 1.5rem; */
   margin-bottom: 0.5rem;
 }
 
