--- a/src/styles/roles.module.css
+++ b/src/styles/roles.module.css
@@ -150,3 +150,28 @@
     font-weight: 700;
   }
 }
+
+.buttons {
+  margin-top: 32px;
+  display: flex;
+  flex-direction: row;
+  align-items: flex-start;
+  border-radius: 4px;
+}
+
+.primarybutton {
+  padding: 12px 20px;
+  background: var(--ctc);
+  border-radius: 12px;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 24px;
+  color: var(--verde);
+  background-color: var(--white);
+  cursor: pointer;
+}
+
+.primarybutton:hover {
+  color: var(--verde);
+}
