--- a/src/styles/team.module.css
+++ b/src/styles/team.module.css
@@ -1,7 +1,8 @@
 .grid {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));
-  grid-gap: 4px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 10px;
 }
 
 .item {
@@ -32,21 +33,22 @@
   font-weight: 500;
   margin: 12px auto 0 auto;
   text-align: center;
+  color: var(--white);
 }
 
 .role {
   font-weight: 500;
   text-align: center;
-  color: var(--accents-3);
+  color: var(--verde);
+}
+
+@media (min-width: 800px) {
+  .grid {
+    width: 70%;
+  }
 }
 
 @media (max-width: 800px) {
-  .grid {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(120px, 1fr));
-    grid-gap: 4px;
-  }
-
   .item {
     min-height: 120px;
     width: 120px;
