--- a/src/styles/pastprojects.module.css
+++ b/src/styles/pastprojects.module.css
@@ -7,14 +7,12 @@
 }
 
 .panel {
-  height: 100%;
-  display: flex;
-  align-items: center;
+  display: grid;
   max-width: 880px;
   justify-content: center;
   grid-template-columns: 1fr 1fr;
   gap: 30px;
-  /* align-content: center; */
+  align-items: center;
   margin: 0px auto;
 }
 
