--- a/src/styles/students.module.css
+++ b/src/styles/students.module.css
@@ -19,6 +19,15 @@
   overflow: hidden;
   position: relative;
   margin: 0;
+  max-width: 100%;
+  height: auto;
+}
+
+.photolarge {
+  grid-column: span 2;
+  grid-row: span 2;
+  position: relative;
+  display: block;
 }
 
 .buttonGroup {
@@ -166,14 +175,13 @@
 .photogrid {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
-  overflow: hidden;
+  aspect-ratio: 16 / 9;
   gap: 20px;
   margin: 64px 0px;
 }
 
 .photo {
   display: block;
-  box-sizing: border-box;
   overflow: hidden;
 }
 
